<resources>
  <string name="app_name">FlickrViewer</string>
  <string name="authority_img_provider" translatable="false">lz.renatkaitmazov.flickrviewer.fileprovider</string>
  <string name="cache_subdirectory_name" translatable="false">images</string>
  <string name="transition_name_photo" translatable="false">transition_photo</string>

  <string name="title_recent_photos">Recent</string>
  <string name="title_search">Search</string>
  <string name="title_search_with_query">Search: %1$s</string>

  <!--Menu items titles-->
  <string name="menu_title_search">Search</string>
  <string name="menu_title_share">Share</string>

  <!--Hints-->
  <string name="hint_search_photos">Enter query</string>

  <!--Errors-->
  <string name="error_general">Error</string>
  <string name="error_when_loading">Error occurred while loading</string>
  <string name="error_no_connection">No Internet connection</string>
  <string name="error_no_results">Nothing to show</string>
  <string name="error_when_sharing_image">Error occurred while sharing an image</string>
  <string name="error_short_query">Query must contain at least 3 characters</string>

  <!--Titles-->
  <string name="title_retry">Retry</string>
  <string name="title_update">Update</string>
  <string name="title_share_via">Share via</string>

  <!--Descriptions-->
  <string name="description_no_connection">You are not connected to the Internet.\nMake sure you have Internet connection and retry.</string>
  <string name="description_no_app_to_share">There is no app installed on your device that can share image. Please, visit Play Store and install one</string>
</resources>
