<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <android.support.design.widget.AppBarLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.Toolbar
      xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      android:id="@+id/toolbar"
      android:layout_width="match_parent"
      android:layout_height="?attr/actionBarSize"
      android:background="@color/colorPrimary"
      android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
      app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"
      app:layout_scrollFlags="scroll|enterAlways|snap"/>

  </android.support.design.widget.AppBarLayout>

  <android.support.v4.widget.SwipeRefreshLayout
    android:id="@+id/photoListRefreshLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <android.support.v7.widget.RecyclerView
      android:id="@+id/photoListRecyclerView"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      style="@style/VerticalScrollbarStyle"
      android:layoutAnimation="@anim/layout_animation_fly_up"/>

  </android.support.v4.widget.SwipeRefreshLayout>

  <lz.renatkaitmazov.flickrviewer.base.customview.ErrorView
    android:id="@+id/noConnectionErrorView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    app:errorImageSrc="@drawable/img_no_connection"
    app:errorTitleText="@string/error_no_connection"
    app:errorDescriptionText="@string/description_no_connection"
    app:errorButtonText="@string/title_retry"
    android:background="@android:color/white"
    android:visibility="gone"/>

  <lz.renatkaitmazov.flickrviewer.base.customview.ErrorView
    android:id="@+id/noResultsErrorView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    app:errorImageSrc="@drawable/img_no_results"
    app:errorTitleText="@string/error_no_results"
    app:errorButtonText="@string/title_recent_photos"
    android:background="@android:color/white"
    android:visibility="gone"/>

</android.support.design.widget.CoordinatorLayout>